--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </iframe>
         </section>
         <section id="redes">
-            <a href="#" target="tela"><img src="imagens/logo-home.jpg" alt=""></a> <br>
+            <a href="home.html" target="tela"><img src="imagens/logo-home.jpg" alt=""></a> <br>
             <a href="#" target="tela"><img src="imagens/logo-youtube.jpg" alt=""></a> <br>
             <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt=""></a> <br>
             <a href="#" target="tela"><img src="imagens/logo-facebook.jpg" alt=""></a> <br>
